--- a/ImageClassification/Getting Started.ipynb
+++ b/ImageClassification/Getting Started.ipynb
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1054,7 @@
     }
    ],
    "source": [
-    "new_model = load_model(os.path.join('models','imageclassifier.keras'))\n",
+    "new_model = load_model(os.path.join('models','imageclassifier.keras'), custom_objects={'class_names': class_names})\n",
     "new_model.summary()"
    ]
   },
